Changelog
=========

Here you can see the full list of changes between each Flask-Restless release.

.. note::

   As of version 0.6, Flask-Restless supports both pure SQLAlchemy and
   Flask-SQLAlchemy models. Before that, it supported only Elixir models.

Version 0.9.2-dev
-----------------

Not yet released.

Version 0.9.1
-------------

Released on January 17, 2013.

- #126: fix documentation build failure due to bug in a dependency.
- #127: added "ilike" query operator.

Version 0.9.0
-------------

Released on January 16, 2013.

- Fixed issue #123: :http:method:`patch` requests to instances which do not
  exist result in a :http:statuscode:`404` response.
- Removed ability to provide a :class:`~sqlalchemy.orm.session.Session` class
  when initializing :class:`APIManager`; provide an instance of the class
  instead.
- Changes some dynamically loaded relationships used for testing and in
  examples to be many-to-one instead of the incorrect one-to-many. Versions of
  SQLAlchemy after 0.8.0b2 raise an exception when the latter is used.
- Fixed issue #117: allow adding related instances on :http:method:`patch`
  requests for one-to-one relationships.
- Fixed issue #114: fix bug where string representations of integers were
  converted to integers.
- Fixed issue #110: enable ``results_per_page`` query parameter for clients,
  and added ``max_results_per_page`` keyword argument to
  :meth:`APIManager.create_api`.
- Fixed issue #109: use `sphinxcontrib-issuetracker`_ to render links to GitHub
  issues in documentation.
- Fixed issue #105: added ability to set a list of related model instances on a
  model.
- Fixed issue #107: server responds with an error code when a
  :http:method:`patch` or :http:method:`post` request specifies a field which
  does not exist on the model.
- Fixed issue #108: dynamically loaded relationships should now be rendered
  correctly by the :func:`views._to_dict` function regardless of whether they
  are a list or a single object.
